# DiPeO

./: .coverage  .env.mcp.example  .gitignore  .ignore  .importlinter  .npmrc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DIAGRAM_RULES.md  METRICS_TIMING_FIX_SUMMARY.md  MIGRATION_PLAN.md  MONITOR_CLEANUP_ANALYSIS.md  Makefile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  TODO_2.md  TODO_first.md  TYPESCRIPT_MODEL_REVIEW.md  TYPESCRIPT_MODEL_REVIEW_AUDIT.md  TYPESCRIPT_MODEL_REVIEW_DETAILED.md  TYPESCRIPT_MODEL_REVIEW_SUMMARY.md  advice.md  agent-diagram.json  agent-diagram.yaml  agentdiagram_tool.py  analysis.md  architecture.md  build-all.sh  build-tauri.ps1  check_duplicates.py  codegen.sh  codegen_remove_hardcoded_extractors_via_template_job_v_2_di_pe_o.md  conversation_analysis.md  dev.sh  di_pe_o_graph_ql_↔_generated_code_integration_plan.md  diagram.md  (+56 more)
apps/: AGENTS.md  (+2 more)
apps/cli/: DEPRECATED.md  README.md  codegen.yml  executor.py  pyproject.toml  setup.py
apps/cli/dipeo/: models.py
apps/cli/scripts/: generate_graphql_operations.py
apps/cli/tests/: test_hooks.py
apps/desktop/src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
apps/server/: .importlinter  CLAUDE.md  README.md  bootstrap.py  build.spec  config.py  dipeo-server-correct.spec  dipeo-server-hooks.spec  hook-dependency_injector.py  main.py  main_bundled.py  main_original.py  openapi.yaml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  schema.graphql  schema_v2.graphql  test-dependency-injector.py
apps/server/dipeo_server/: __init__.py  __main__.py
apps/server/generated_frontend/: index.html
apps/server/scripts/: check_duplicates.py  check_imports.py  export-schema.py  flatten_api_structure.py  migrate_to_dipeo_domain.py  rewrite_api_imports.py  rewrite_imports.py  update_api_imports_after_flatten.py  update_remaining_imports.py  update_src_imports.py
apps/server/src/: __init__.py  constants.py  db_blocks.py  exceptions.py  llm_adapters.py  run_graph.py
apps/server/tests/: README.md  __init__.py  conftest.py  test_api_integration.py  test_check_duplicates.py  test_check_imports.py  test_end_to_end.py  test_executors.py  test_graphql_integration.py  test_graphql_upload.py  test_health_metrics.py  test_node_type_consistency.py  test_performance.py  test_protocol_compliance.py  test_rest_freeze.py  test_runner.py  test_server.py  test_simplified_execution.py  test_unified_execution_engine.py
cli/: README.md  __init__.py  __main__.py  api_client.py  cli_runner.py  deterministic_executor.py  diagram_commands.py  diagram_loader.py  dispatcher.py  entry_point.py  execution.py  graphql_client.py  interactive_handler.py  pyproject.toml  requirements.txt  server_manager.py  setup.py  stats.py  test_cli.py  test_graphql_cli.py
cli/commands/: __init__.py  compilation.py  conversion.py  execution.py  query.py
cli/dipeo/: models.py  utils.py
cli/dipeo_cli/: __init__.py  __main__.py  api_client.py  cli.py  convert.py  models.py  run.py  utils.py
cli/dipeo_cli/commands/: convert.py  monitor.py  run.py  stats.py
cli/display/: metrics_manager.py
dipeo/: PORTS.md  README.md  __init__.py  build-windows.spec  pyproject.toml
dipeo/application/: AGENTS.md  CLAUDE.md  __init__.py  engine_factory.py  execution.py  local_execution.py  protocols.py  unified_service_registry.py
dipeo/application/ai/: __init__.py  dipeodipeo.py
dipeo/application/bootstrap/: __init__.py  application_container.py  containers.py  core_container.old.py  core_container.py  infrastructure_container.py  lifecycle.py  port_metrics.py  wiring.py  wiring_minimal.py
dipeo/application/compatibility/: __init__.py  unified_context.py
dipeo/config/: __init__.py  base_logger.py  execution.py  limits.py  llm.py  memory.py  paths.py  provider_capabilities.py  services.py  settings.py
dipeo/container/: MIGRATION_GUIDE.md  PHASE5_SUMMARY.md  __init__.py  application_container.py  base.py  container.py  containers.py  domain_container.py  infrastructure_container.py  profiling.py  utilities.py
dipeo/core/: __init__.py  config.py  constants.py  type_defs.py  unified_context.py  utils.py
dipeo/diagram/: __init__.py  base.py  conversion_utils.py  graph_utils.py  shared_components.py  unified_converter.py
dipeo/diagram_generated/: README.md  __generated_conversions__.py  __init__.py  api_job_node.py  code_job_node.py  condition_node.py  conversions.py  db_node.py  diagram_generated_conversions.py  diagram_models.py  domain-schema.graphql  domain_models.py  endpoint_node.py  enums.py  field-configs.json  generated_nodes.py  generated_nodes.py.backup  handle_utils.py  integrations.py  json_schema_validator_node.py  node_factory.py  person_job_node.py  shell_job_node.py  start_node.py  sub_diagram_node.py  template_job_node.py  typescript_ast_node.py  user_response_node.py
dipeo/domain/: AGENTS.md  CLAUDE.md  __init__.py  config.py  constants.py  file.py  judge_helper.py  messaging.py  resolution.py  service_registry.py  service_utils.py  type_defs.py
dipeo/examples/: event_based_execution_example.py  refactored_services_usage.py
dipeo/infra/: __init__.py
dipeo/infrastructure/: AGENTS.md  CLAUDE.md  __init__.py  logging_config.py  schema_generator.py
dipeo/models/: AGENTS.md  CLAUDE.md  DEFAULT_HANDLING_GUIDE.md  FIELD_PRESETS_DEMO.md  NAMING_AUDIT_REPORT.md  QUERY_VALIDATION_FRAMEWORK.md  README.md  TODO.md  VALIDATION_REFACTORING_RESULTS.md  __generated_conversions__.py  __generated_models__.py.broken  __init__.py  conversions.py  diagram_generated_conversions.py  diagram_models.py  handle_utils.py  models.py  package.json  tsconfig.json
dipeo/tests/: __init__.py
server/: __init__.py  __main__.py  app_context.py  bootstrap.py  config.py  main.py  openapi.yaml  pyproject.toml  requirements.txt
server/api/: context.py  mcp_utils.py  router.py  webhooks.py
server/src/: domain.py  execution_engine.py  input_models.py
server/src_backup/: input_models.py
server/tests/: __init__.py  test_graphql_integration.py  test_rest_freeze.py  test_server.py  test_websocket_disable.py
(+6080 files in other folders)
