[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dipeo-server"
version = "1.0.0"
description = "DiPeO Backend API Server"
requires-python = ">=3.13"
dependencies = []  # Dependencies managed by root pyproject.toml

[project.scripts]
dipeo-server = "server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
