[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dipeo_cli"
version = "1.0.0"
description = "DiPeO CLI - Command-line interface"
requires-python = ">=3.13"
dependencies = []  # Dependencies managed by root pyproject.toml

[project.scripts]
dipeo = "dipeo_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dipeo_cli"]
