[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dipeo_cli"
version = "1.0.0"
description = "DiPeO CLI - Command-line interface"
requires-python = ">=3.13"
dependencies = []  # Dependencies managed by root pyproject.toml

[project.scripts]
# CLI has been moved to dipeo_server.cli.entry_point
# See apps/server/pyproject.toml for the actual entry points
# This file kept for backward compatibility but scripts are defined in server package

[tool.hatch.build.targets.wheel]
packages = ["src/dipeo_cli"]
